# SortFilterProxyModel

./: .gitignore  CMakeLists.txt  qqmlsortfilterproxymodel.h
filters/: filtercontainer.cpp  filtercontainer.h
proxyroles/: proxyrolecontainer.cpp  proxyrolecontainer.h
sorters/: sortercontainer.cpp  sortercontainer.h
tests/: tst_rolesorter.qml  tst_stringsorter.qml
